chore: update readme and package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grab-github-release",
+  "name": "@aleclarson/grab-github-release",
   "version": "2.1.0",
   "description": "Downloads and optionally unpacks an archive from GitHub release assets for the current platform.",
   "author": {
